# lb-9000

./: .gitignore  config.yaml  go.mod  go.sum  kind.yaml  makefile  readme.md
internal/client/: Dockerfile  client.yaml  main.go
internal/server/: Dockerfile  main.go  server.yaml
lb-9000/: .gitignore  Dockerfile  go.mod  go.sum  lb.yaml  main.go
lb-9000-rust/: .env  Cargo.toml  Dockerfile  config.yaml  lb.yaml
lb-9000-rust/src/: main.rs
lb-9000/internal/backend/: backend.go
lb-9000/internal/config/: .env  config.go  config.yaml  config_test.go
lb-9000/internal/election/: elector.go
lb-9000/internal/leader/: leader.go
lb-9000/internal/orchestration/: factory.go  kubernetes.go  kubernetes_test.go  orchestration.go
lb-9000/internal/pod/: pod.go  pod_test.go
lb-9000/internal/pool/: pool.go  pool_test.go
lb-9000/internal/proxy/: proxy.go
lb-9000/internal/store/: store.go
lb-9000/internal/store/memory/: memory.go
lb-9000/internal/store/redis/: redis.go  redis.yaml  redis_test.go
lb-9000/internal/strategy/: strategy.go
lb-9000/internal/utils/: redis.go
