[package]
name = "lb-9000-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
envconfig = "0.10.0"
kube = { version = "0.87.1", features = ["client", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde = "1.0.193"
serde_derive = "1.0.8"
serde_with = "3.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
log = "0.4.20"
dashmap = "5.5.3"
env_logger = "0.10.1"
hyper = { version = "1.0.1", features = ["full"] }
axum = { version = "0.6.20", features = ["http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["full"] }
http-body-util = "0.1.0"
